making code Java 8 compatible